# ai-trade-matching-system

./: .bedrock_agentcore.yaml  .dockerignore  .env.dev  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .vibe-config.json  =6.0.0  AGENTCORE_DEPLOYMENT_BUG_REPORT.md  AGENTCORE_MIGRATION_NEXT_STEPS.md  AGENT_INVOCATION_GUIDE.md  ARCHITECTURE.md  AWS_SECURITY_ASSESSMENT_REPORT_2025-12-21.md  BACKLOG.md  BRANCH_GUIDE.md  BUG_REPORT.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLOUDFRONT_DEPLOYMENT.md  CODE_OF_CONDUCT.md  COMPLETE_CHANGES_GUIDE.md  COMPONENT_ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_DIAGNOSTIC_NOW.md  DEVELOPMENT.md  DEV_SETUP.md  DOCUMENTATION_UPDATE_COMPLETE.md  Dockerfile  E2E_TEST_RESULTS.md  FEATURE_SPECS.md  HOW_TO_RUN_TESTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_CHANGES.md  NEW_PROMPTS_IMPACT_ANALYSIS.md  (+78 more)
.claude/: settings.local.json
deployment/swarm_agentcore/: .agentcore_identity_cognito_user.json  .agentcore_identity_user.env  .bedrock_agentcore.yaml  .dockerignore  .env  .env.example  CLI_COMMAND_EXAMPLES.md  Dockerfile  INTEGRATION_TESTS_GUIDE.md  MEMORY_CONFIGURATION_GUIDE.md  PERFORMANCE_TESTS_GUIDE.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START.md  README.md  README_A2A_INTEGRATION.md  RUNTIME_STARTUP_ISSUE.md  SECURITY_ASSESSMENT_REPORT.md  TASK_7_COMPLETION_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  TROUBLESHOOTING_MODEL_ERRORS.md  a2a_client_integration.py  agentcore.yaml  check_table_schema.py  deploy_agentcore.sh  http_agent_orchestrator.py  idempotency.py  pyproject.toml  requirements.txt  run_tests.sh  setup_a2a_authentication.py  setup_a2a_env.sh  setup_memory.py  status_tracker.py  status_writer.py  test_a2a_integration.py  test_agent_creation.py  test_error_handling.py  test_imports.py  test_integration_memory_persistence.py  test_integration_trade_processing.py  (+15 more)
deployment/swarm_agentcore/.bedrock_agentcore/trade_matching_swarm/: Dockerfile
deployment/trade_extraction/: .bedrock_agentcore.yaml  AGENTCORE_IMPROVEMENTS.md  SECURITY.md  SECURITY_SUMMARY_PROMPT_CHANGES.md  agent.py  agent_registry.py  agentcore.yaml  agentcore_gateway_integration.py  agentcore_integration_config.md  agentcore_memory_integration.py  agentcore_observability_enhancement.py  agentcore_policy_integration.py  aws_resources.py  data_models.py  deploy.sh  deploy_agentcore.sh  deploy_with_cloudformation.sh  dev.sh  http_interface.py  logging_config.py  monitoring-dashboard.json  pyproject.toml  register_agent_deployment.py  requirements-dev.txt  requirements.txt  requirements_agentcore.txt  security-rules.guard  sop_workflow.py  table_router.py  test_agent.sh  test_data_models.py  test_dev.py  test_invoke.py  test_local.py  tool_resources_config.json  trade_data_validator.py  trade_extraction_agent.py  trade_extraction_agent_enhanced.py  trade_extraction_agent_strands.py  trade_extraction_agent_strands_refactored.py  (+3 more)
(+785 files in other folders)
