[project]
name = "latest_trade_matching_agent"
version = "0.1.0"
description = "latest-trade-matching-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "pdf2image>=1.17.0",
]

[project.scripts]
latest_trade_matching_agent = "latest_trade_matching_agent.main:run"
run_crew = "latest_trade_matching_agent.main:run"
train = "latest_trade_matching_agent.main:train"
replay = "latest_trade_matching_agent.main:replay"
test = "latest_trade_matching_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
