[project]
name = "trade-matching-swarm-agentcore"
version = "1.0.0"
description = "Trade Matching Swarm HTTP Orchestrator for AI Trade Matching System"
authors = [{ name = "Trade Matching System", email = "admin@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "bedrock-agentcore>=1.0.0",
    "httpx>=0.24.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
