[project]
name = "trade-extraction-agent"
version = "1.0.0"
description = "Trade Extraction Agent for AI Trade Matching System"
authors = [{ name = "Trade Matching System", email = "admin@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.69.0",
    "bedrock-agentcore>=1.1.1",
    "bedrock-agentcore-starter-toolkit>=0.2.4",
    "boto3>=1.40.0",
    "fastapi>=0.118.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "strands-agents>=1.19.0",
    "strands-agents-tools>=0.0.1",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]